--- a/scriptlang.cabal
+++ b/scriptlang.cabal
@@ -9,7 +9,7 @@ data-files:
     stdlib.txt
 
 executable scriptlang
-    main-is: Scriptlang.hs
+    main-is: Main.hs
     build-depends: base, haskeline, HUnit, filepath, parsec, Util, wl-pprint, BoundedChan, process, directory, strict, mtl, StateVar, containers, transformers
     ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-type-defaults
     extensions: DoAndIfThenElse, TupleSections
